[gd_scene load_steps=4 format=3 uid="uid://event001"]

[ext_resource type="Script" uid="uid://dij0urmr5on1m" path="res://scripts/ui/event_scene.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.06, 0.14, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.5, 0.8, 0.8)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_result"]
bg_color = Color(0.1, 0.08, 0.16, 0.98)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.5, 0.8, 0.5, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 6

[node name="EventScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.04, 0.1, 1)

[node name="SafeArea" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 40

[node name="VBox" type="VBoxContainer" parent="SafeArea"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="TitleLabel" type="Label" parent="SafeArea/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 36
text = "EVENT"
horizontal_alignment = 1

[node name="EventPanel" type="Panel" parent="SafeArea/VBox"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Margin" type="MarginContainer" parent="SafeArea/VBox/EventPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="DescriptionLabel" type="Label" parent="SafeArea/VBox/EventPanel/Margin"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.8, 0.95, 1)
theme_override_font_sizes/font_size = 20
text = "Event description goes here..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DescriptionLabel" type="Label" parent="SafeArea/VBox"]
layout_mode = 2

[node name="ChoicesLabel" type="Label" parent="SafeArea/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.65, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "Choose your action:"
horizontal_alignment = 1

[node name="ChoicesContainer" type="VBoxContainer" parent="SafeArea/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="ResultPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_result")

[node name="VBox" type="VBoxContainer" parent="ResultPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ResultLabel" type="Label" parent="ResultPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.95, 0.6, 1)
theme_override_font_sizes/font_size = 22
text = "Result"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ContinueButton" type="Button" parent="ResultPanel/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Continue"
